  ValueChangeEvent.toString() added
  DefaultEntityEditModel.delete() now clears the model if the active entity was deleted
  EntityUiUtil.createTextArea() overloaded with enabledState
  Databases.getDatabaseStatistics() moved to DatabaseUtil along with associated classes
  DefaultFilteredComboBoxModel.acceptAllCriteria now static and final
  Util.NullFormat() privatized, NULL_FORMAT constant introduced
  Naming prefixes for State and Event instances removed (st, evt)
  FilteredTableModel.setColumns() moved to FilteredTableColumnModel
0.7.0 [incompatible api: server monitor can not connect to servers of earlier versions]
  Tomcat jdbc connection pool plugin added, lots of refactoring in common.db.pool and elsewhere
  EntityRESTService plugin added, some refactoring of related components
  ivy.xml reorganized and improved
  ValueMapImpl.setAs() improved, now fires value change events only after all values have been set
  EntityConnectionImpl.executeFunction/Procedure() does not check for transaction states before or after execution, leaving the responsibility in the hands of the programmer
  EntityConnectionLogger now package private, instantiated via EntityConnections.createLogger()
  DatabaseConnectionImpl.checkConnectionStatement field removed
  EntityImpl.entityInstance() changed into a constructor
  ValueMap.ToString interface removed, superfluous
  EntityPanel no longer constructs a default EntityTablePanel in case the one received via the constructor is null
  EntityTablePanel.tableDoubleClickedEvent was never fired
  DatabaseUtil.DatabaseStatistics moved back to Databases, now package protected, no need for a backwards incompatible change, barely cosmetic
  Control.doSetMnemonic() added protected
  ToggleControl overrides doSetMnemonic() in order to set the mnemonic in the associated button model as well
  Control.getMnemonic() now returns -1 in case no mnemonic is specified, instead of throwing a NullPointerException