@@ -3555,3 +3555,4 @@
   Control.doSetMnemonic() added protected
   ToggleControl overrides doSetMnemonic() in order to set the mnemonic in the associated button model as well
   Control.getMnemonic() now returns -1 in case no mnemonic is specified, instead of throwing a NullPointerException
+  Configuration.DISPOSE_EDIT_DIALOG_ON_ESCAPE added, used in EntityEditPanel
